# openstack-virtual-baremetal

./: .gitignore  .gitmodules  .gitreview  .stestr.conf  .zuul.yaml  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/deploy/: environment-index.rst  quintupleo.rst
doc/source/host-cloud/: patches.rst  prepare.rst
environments/: all-networks-public-bond.yaml  all-networks.yaml  base-extra-node-all.yaml  base-extra-node.yaml  base.yaml  disable-bmc.yaml  ipv6-radvd-configuration.yaml  ipv6-radvd.yaml  routed-networks-configuration.yaml  routed-networks-ipv6.yaml
ipxe/: .gitignore  Makefile  README  ipxe-boot.img  script.ipxe
ipxe/elements/ipxe-boot-image/: element-deps
ipxe/elements/ipxe-boot-image/install.d/: 50-grub2-boot-ipxe
ipxe/ipxe-config/: README  general.h
openstack_virtual_baremetal/: auth.py  build_nodes_json.py  deploy.py  openstackbmc.py
openstack_virtual_baremetal/tests/: test_auth.py  test_build_nodes_json.py  test_deploy.py  test_openstackbmc.py
sample-env-generator/: environments.yaml
templates/: baremetal-networks-all.yaml  baremetal-networks-routed.yaml  baremetal-ports-extra-node-all.yaml  bmc-none.yaml  bmc.yaml  dhcp-relay.yaml  dhcpv6-relay.yaml  ipv6-radvd.yaml  quintupleo.yaml  resource-registry.yaml  undercloud-networks-existing.yaml  undercloud-networks-public-router.yaml  undercloud-networks-routed.yaml  undercloud-networks.yaml  undercloud-ports.yaml  undercloud.yaml  virtual-baremetal-servers-volume.yaml  virtual-baremetal-servers.yaml  virtual-baremetal.yaml
