[metadata]
name = openstack-virtual-baremetal
summary = A collection of tools for using OpenStack instances to test baremetal deployment
description-file =
    README.rst
author = Ben Nemec
author-email = bnemec@redhat.com
home-page = http://www.redhat.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    openstack_virtual_baremetal

[entry_points]
console_scripts =
    ovb-deploy = openstack_virtual_baremetal.deploy:main
    ovb-build-nodes-json = openstack_virtual_baremetal.build_nodes_json:main
    openstackbmc = openstack_virtual_baremetal.openstackbmc:main
